-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8002013 | 8 | Zhengyu Gu | P2 | Closed | Fixed | b63 |
| JDK-8017836 | 7u45 | Zhengyu Gu | P2 | Closed | Fixed | b01 |
| JDK-8003289 | 7u40 | Zhengyu Gu | P2 | Closed | Fixed | b04 |
| JDK-8003870 | hs24 | Zhengyu Gu | P2 | Closed | Fixed | master |
There is an example:
[fffffd7ffb800000 - fffffd7ffbe00000] [9] seq = 337 <== reserve a bigger range
[fffffd7ffb800000 - fffffd7ffbe00000] [9] seq = 338 <== dup record
[fffffd7ffb800000 - fffffd7ffb800000] [10b] seq = 339 <== mtClass
[fffffd7ffb800000 - fffffd7ffba00000] [9] seq = 340 <== re-reserve a smaller range
[fffffd7ffb800000 - fffffd7ffba00000] [a] seq = 341 <== commit
[fffffd7ffb800000 - fffffd7ffba00000] [a] seq = 342 <== dup record
- backported by
-
JDK-8002013 NMT: NMT needs to deal overlapped virtual memory ranges
-
- Closed
-
-
JDK-8003289 NMT: NMT needs to deal overlapped virtual memory ranges
-
- Closed
-
-
JDK-8003870 NMT: NMT needs to deal overlapped virtual memory ranges
-
- Closed
-
-
JDK-8017836 NMT: NMT needs to deal overlapped virtual memory ranges
-
- Closed
-
- duplicates
-
JDK-7198283 NMT: fault binary search code causes infinite loop
-
- Closed
-
-
JDK-7197966 NMT: die code cleanup
-
- Closed
-
- relates to
-
JDK-8003487 NMT: incorrect assertion in VMMemPointerIterator::remove_released_region method (memSnapshot.cpp)
-
- Closed
-
-
JDK-7188475 NMT ON: SIGSEGV in MemSnapshot::promote()
-
- Closed
-
-
JDK-7198283 NMT: fault binary search code causes infinite loop
-
- Closed
-